--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,14 @@ html,body{
 .freecodecamp-logo{
   height: 50px;
 }
+
+.contenedor-principal{
+height: 550px;
+min-width: 600px;
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+align-items: center;
+
+
+}
